@@ -66,6 +66,7 @@ public:
   virtual bool GetSubtitleVisible(){ return false;};
   virtual void SetSubtitleVisible(bool bVisible){};
   virtual bool GetSubtitleExtension(CStdString &strSubtitleExtension){ return false;};
+  virtual bool AddSubtitle(const CStdString& strSubPath) {return false;};
 
   virtual int GetAudioStreamCount(){ return 1;};
   virtual int GetAudioStream(){ return 0;};
